@@ -234,6 +234,7 @@ void ERR_load_DH_strings(void);
 #define DH_F_DH_PUB_ENCODE				 109
 #define DH_F_GENERATE_KEY				 103
 #define DH_F_GENERATE_PARAMETERS			 104
+#define DH_F_PKEY_DH_DERIVE				 112
 #define DH_F_PKEY_DH_KEYGEN				 113
 
 /* Reason codes. */
@@ -242,6 +243,7 @@ void ERR_load_DH_strings(void);
 #define DH_R_BN_ERROR					 106
 #define DH_R_DECODE_ERROR				 104
 #define DH_R_INVALID_PUBKEY				 102
+#define DH_R_KEYS_NOT_SET				 108
 #define DH_R_NO_PARAMETERS_SET				 107
 #define DH_R_NO_PRIVATE_VALUE				 100
 #define DH_R_PARAMETER_ENCODING_ERROR			 105
